@@ -20,8 +20,10 @@ class Ingo_Hooks
      * @param string $driver  The driver name (array key from backends.php).
      *
      * @return mixed  If non-array, uses hordeauth credentials (DEFAULT).
-     *                Otherwise, an array with the following keys (non-existent
-     *                keys will use default values):
+     *                Otherwise, an array with the following keys
+     *                (non-existent keys will use default values):
+     *  - euser: (string; SIEVE ONLY) For the sieve driver, the effective
+     *           user to use.
      *  - password: (string) Password.
      *  - username: (string) User name.
      */
