@@ -27,13 +27,14 @@ class Ingo_Transport_Timsieved extends Ingo_Transport
     public function __construct(array $params = array())
     {
         $default_params = array(
+            'admin'      => '',
+            'debug'      => false,
+            'euser'      => '',
             'hostspec'   => 'localhost',
             'logintype'  => 'PLAIN',
             'port'       => 4190,
             'scriptname' => 'ingo',
-            'admin'      => '',
-            'usetls'     => true,
-            'debug'      => false
+            'usetls'     => true
         );
 
         $this->_supportShares = true;
@@ -62,12 +63,13 @@ class Ingo_Transport_Timsieved extends Ingo_Transport
             $this->_params['hostspec'],
             $this->_params['port'],
             $this->_params['logintype'],
-            Ingo::getUser(false),
+            $this->_params['euser'],
             $this->_params['debug'],
             false,
             $this->_params['usetls'],
             null,
-            array($this, 'debug'));
+            array($this, 'debug')
+        );
 
         $res = $this->_sieve->getError();
         if ($res instanceof PEAR_Error) {
