@@ -34,7 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
  <notes>
-* 
+* [mms] Add &apos;euser&apos; option to &apos;transport_auth&apos; hook allowing the effective user to be provided for the timsieved transport driver.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1130,7 +1130,7 @@
    <date>2012-10-12</date>
    <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
    <notes>
-* 
+* [mms] Add &apos;euser&apos; option to &apos;transport_auth&apos; hook allowing the effective user to be provided for the timsieved transport driver.
    </notes>
   </release>
  </changelog>
